[gd_scene load_steps=13 format=3 uid="uid://d4cpf87cb1bs0"]

[ext_resource type="Script" path="res://scripts/Main/Buttons.gd" id="1_d3apa"]
[ext_resource type="PackedScene" uid="uid://bcxdvv4qwwmqm" path="res://scenes/SimonSays/SimonSaysGame.tscn" id="2_vqi0v"]
[ext_resource type="PackedScene" uid="uid://c1ov306httsie" path="res://scenes/Snake/SnakeGame.tscn" id="3_kj1q5"]
[ext_resource type="PackedScene" uid="uid://c1n3bt7ntc5gf" path="res://scenes/Pong/perry.tscn" id="4_uxid6"]
[ext_resource type="PackedScene" uid="uid://cgu5dun6rgtic" path="res://scenes/Dino/DinoGame.tscn" id="5_c04dh"]
[ext_resource type="Theme" uid="uid://bj6ltbgw537xh" path="res://themes/Main/button.tres" id="5_o7461"]
[ext_resource type="Theme" uid="uid://cc5frax1el0v6" path="res://themes/Main/line_edit.tres" id="6_qwswx"]
[ext_resource type="PackedScene" uid="uid://bjw6sh7j2lsq3" path="res://scenes/Creep/Creep.tscn" id="6_xbjbf"]
[ext_resource type="Theme" uid="uid://0knrve0pfa03" path="res://themes/Main/label.tres" id="7_7s5q7"]
[ext_resource type="PackedScene" uid="uid://cj0i3bqn4ap1r" path="res://scenes/Flappy/Flappy.tscn" id="7_8y6xu"]
[ext_resource type="PackedScene" uid="uid://cf4xkqs74ytur" path="res://scenes/Saucer/Saucer.tscn" id="8_8ftby"]
[ext_resource type="PackedScene" uid="uid://dx4hwtnr40m1r" path="res://scenes/Attack/Attack.tscn" id="9_2365c"]

[node name="Buttons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3apa")
simon_says = ExtResource("2_vqi0v")
snake = ExtResource("3_kj1q5")
pong = ExtResource("4_uxid6")
dino = ExtResource("5_c04dh")
creep = ExtResource("6_xbjbf")
flappy = ExtResource("7_8y6xu")
saucer = ExtResource("8_8ftby")
attack = ExtResource("9_2365c")

[node name="SimonSays" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 256.0
offset_right = 240.0
offset_bottom = 384.0
theme = ExtResource("5_o7461")
text = "Simon Says Game"

[node name="Snake" type="Button" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 256.0
offset_right = 456.0
offset_bottom = 384.0
theme = ExtResource("5_o7461")
text = "Snake"

[node name="Perry" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 256.0
offset_right = 672.0
offset_bottom = 384.0
theme = ExtResource("5_o7461")
text = "Perry
"

[node name="Dino" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 408.0
offset_right = 240.0
offset_bottom = 536.0
theme = ExtResource("5_o7461")
text = "Dino"

[node name="Creep" type="Button" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 408.0
offset_right = 456.0
offset_bottom = 536.0
theme = ExtResource("5_o7461")
text = "Avoid the Creep"

[node name="Flappy" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 408.0
offset_right = 672.0
offset_bottom = 536.0
theme = ExtResource("5_o7461")
text = "Flappy"

[node name="Saucer" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 560.0
offset_right = 240.0
offset_bottom = 688.0
theme = ExtResource("5_o7461")
text = "Saucer"

[node name="Attack" type="Button" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 560.0
offset_right = 456.0
offset_bottom = 688.0
theme = ExtResource("5_o7461")
text = "Alien Attack"

[node name="TBD2" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 560.0
offset_right = 672.0
offset_bottom = 688.0
theme = ExtResource("5_o7461")

[node name="Initials" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 168.0
offset_right = 456.0
offset_bottom = 232.0
theme = ExtResource("6_qwswx")
alignment = 1
max_length = 3

[node name="InitialsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 168.0
offset_right = 240.0
offset_bottom = 232.0
theme = ExtResource("7_7s5q7")
text = "Input Initials:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SimonSays" to="." method="_on_simon_says_pressed"]
[connection signal="pressed" from="Snake" to="." method="_on_snake_pressed"]
[connection signal="pressed" from="Perry" to="." method="_on_pong_pressed"]
[connection signal="pressed" from="Dino" to="." method="_on_dino_pressed"]
[connection signal="pressed" from="Creep" to="." method="_on_creep_pressed"]
[connection signal="pressed" from="Flappy" to="." method="_on_flappy_pressed"]
[connection signal="pressed" from="Saucer" to="." method="_on_saucer_pressed"]
[connection signal="pressed" from="Attack" to="." method="_on_attack_pressed"]
[connection signal="text_changed" from="Initials" to="." method="_on_initials_text_changed"]
